# gram-savitsky-golay-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: readme.rs
src/: lib.rs
