[package]
name = "gram-savitzky-golay"
version = "0.1.0"
edition = "2024"
authors = ["H S Helson Go"]
license = "MIT"

[dependencies]
num-traits = { version = "0.2.19", default-features = false }

[dev-dependencies]
approx = { version = "0.5", default-features = false }

[features]
default = ["std"]
std = []
